--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -83,7 +83,7 @@
                             </div>
                             
                                                             <a class="btn btn-dark rounded text-center text-danger" style=" letter-spacing: 2px; font-size: 30px;">&#x20B9 <%if(product?.discountPercentage&&product?.discountPercentage>0){%>
-                                                                <%= product.price-((product?.price*product?.discountPercentage)/100)%>
+                                                                <%= (product.price-((product?.price*product?.discountPercentage)/100)).toFixed(2)%>
                                                             <%}else {%>
                                                                 <%= product?.price%>
                                                             <%}%></a>
@@ -110,7 +110,7 @@
                             <div class="card-footer d-flex justify-content-center align-items-center">
                                 <% if (product?.deleted===false) { %>
                                     <a class="subTotal btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2" ><h4 style=" font-family: 'Michroma', sans-serif;"><span class="">&#x20B9</span><span class="" id="<%=_id%>subTotal"> <%if(product?.discountPercentage&&product?.discountPercentage>0){%>
-                                        <%=(product.price-(product.price*product.discountPercentage)/100)*quantity%>
+                                        <%=((product.price-((product.price*product.discountPercentage)/100))*quantity).toFixed(2)%>
                                         <%}else{%>
                                             <%=product.price*quantity%>
                                             <%}%></span><span></span></h3></a> 
