--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -168,17 +168,17 @@
 }
 
 .productCont{
-  border: 1px solid black;
-  background-color:#dfdfdf;
+  /* border: 1px solid rgb(159, 159, 159); */
+  /* background-color:#dfdfdf; */
   padding: 10px;
   border-radius: 20px;
 }
 
 
 .sideMain {
-  background-color: #f0f0f0;
+  
   border-radius: 20px;
-  border: 1px solid black;
+  
 }
 
 
