--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,5 +1,7 @@
 <%- include('./headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/header.css">
+<link rel="stylesheet" type="text/css" href="../../public/css/card.css">
+
 </head>
 <body>
     <div class="loading-screen">
