--- a/views/user/homePage.ejs
+++ b/views/user/homePage.ejs
@@ -69,7 +69,7 @@
 
 
 <div class="container mt-5 productCont">
-    <h2 class="text-center mt-2" style="  font-family: 'Michroma', sans-serif;">Products</h2>
+    <h2 class="text-center mt-2 mb-4" style="  font-family: 'Michroma', sans-serif;">Products</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3  g-4 d-flex mb-5" style="justify-content: center;">
             <% products.forEach(product=>{%>
                 <div class="col">
