--- a/views/user/orderDetailed.ejs
+++ b/views/user/orderDetailed.ejs
@@ -15,10 +15,12 @@
     </div>
     <div class="d-flex" style="justify-content: space-around; flex-wrap: wrap;">
         <% order?.products?.items.forEach(item => { %>
-    <div class="card mb-3" style="max-width: 540px; border: 1px solid black ; border-radius: 10px;">
+    <div class="card mb-3" style="max-width: 540px; border-radius: 10px;">
     <div class="row g-0">
       <div class="col-md-4" style=" border-radius: 10px; display: flex; justify-content: center; align-items: center; background-color: rgb(246, 246, 246);">
-        <img src="../../public/productImages/<%=item.product.images[0]%>" class="img-fluid rounded-start" alt="..." style="border-radius: 20px;">
+        <a href="/user/productDetailed?id=<%=item.product._id%>" style="text-decoration: none !important;">
+          <img src="../../public/productImages/<%=item.product.images[0]%>" class="img-fluid rounded-start" alt="..." style="border-radius: 20px;">
+        </a>
       </div>
       <div class="col-md-8">
         <div class="card-body">
@@ -144,7 +146,7 @@
           </table>
 
   <div class="d-flex me-2" style="justify-content: end;">
-    <a class="btn btn-warning " href="/downloadInvoice?orderId=<%= order._id %>" target="_blank" style="font-family: 'Michroma', sans-serif;"><i class="fa-solid fa-file-invoice fs-3 me-2"></i>Invoice</a></div>
+    <a class="btn btn-warning " href="/downloadInvoice?orderId=<%= order._id %>" target="_blank" style="font-family: 'Michroma', sans-serif;"><i class="fa-solid fa-file-lines fs-3 me-2"></i>Invoice</a></div>
 
     </div>
 
